# inflections-hs

./: .all-contributorsrc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  inflections.cabal  stack.yaml
.github/workflows/: README.md  build.yml  draft.yml  release.yml
Text/: Inflections.hs
Text/Inflections/: Camelize.hs  Countable.hs  Dasherize.hs  Data.hs  Decamelize.hs  Humanize.hs  Ordinal.hs  Parameterize.hs  Titleize.hs  Transliterate.hs  Types.hs  Underscore.hs
Text/Inflections/Parse/: Acronym.hs  CamelCase.hs  Parameterizable.hs  SnakeCase.hs  Types.hs
bench/: README.md  little_women.txt
bench/memory/: Main.hs
bench/speed/: Main.hs
examples/: AesonTH.hs  RaceReport.hs  randomUser.hs
examples/random-username/: CHANGELOG.md  README.md  package.yaml  random-username.cabal  stack.yaml
examples/random-username/src/: Main.hs
test/: Suite.hs
test/Text/: InflectionsSpec.hs  InflectionsTest.hs
test/Text/Inflections/: CountableSpec.hs  DasherizeSpec.hs  HumanizeSpec.hs  HumanizeTest.hs  OrdinalSpec.hs  OrdinalTest.hs  ParametrizeSpec.hs  PropertiesSpec.hs  Tests.hs  TitleizeSpec.hs  TitleizeTest.hs  TransliterateSpec.hs  TypesSpec.hs  UnderscoreSpec.hs  UnderscoreTest.hs
test/Text/Inflections/Parse/: CamelCaseSpec.hs  CamelCaseTest.hs  SnakeCaseSpec.hs
